backendApp/base/backend-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-app
  name: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend-app
    spec:
      containers:
      - image: quay.io/ravirhsharma/backend:latest
        name: backend-app
        resources: {}
status: {}
