backendApp/base/backend-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: backend-app
  name: backend-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  - port: 8443
    protocol: TCP
    targetPort: 8443
    name: https
  selector:
    app: backend-app
status:
  loadBalancer: {}
