backendApp/base/backend-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend-app
  name: backend-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: backend-app
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
